Do not use a hardcoded size for the buttons in the Information panel

Thanks to Kai Uwe Broulok and Jekyll Wu for the investigation!

BUG: 309498
FIXED-IN: 4.9.4